--- a/readme
+++ b/readme
@@ -1,6 +1,25 @@
-center_suanfa.py-->平均值法模块
-creat_table_t.py-->hive库表创建模块
-geoutils.py-->包含球面距离计算模块
-get_ulidata_jzjz.py-->获取一天转移矩阵表模块
-jz_DBSCAN_fun.py-->密度聚类模块
-DBSCAN_jzjz.py-->异常uli进行校准计算
+1、get_data_jzjz_alluli_v0.py
+功能：在hive库中创建相应的表，并从轨迹表中获取一天时间的转移矩阵
+
+2、get_data_jzjz_alluli_v1.py
+功能：在hive库中创建相应的表，并从轨迹表中获取多天时间的转移矩阵
+
+3、coarse_filtration.py
+功能：运用加权平均算法粗略计算出一天内大于校准距离大于5000米的uli。（选择一天的数据对于64万uli先进行过滤）
+
+4、jzjz_main.py
+功能：运用DBSCAN算法对大于5000米的uli连续多天的转移矩阵进行计算，再去确定uli是否在nextuli所组成的最大的簇内。
+计算原理：对每个uli的转移矩阵数据进行DBSCAN计算，找出nextuli最大的簇，在确定校准坐标点和原始坐标点是否包括在最大簇中，对不同的uli打不同的标签。
+
+5、save_data_or_pic.py
+功能：计算异常的uli的校准坐标点，并可以打印uli和nextuli的散点图进行分析。
+
+6、其他的模块
+center_suanfa.py
+功能：平均值法模块
+creat_table_t.py
+功能：hive库表创建模块
+geoutils.py
+功能：包含球面距离计算模块
+jz_DBSCAN_fun.py
+功能：密度聚类模块
