--- a/readme
+++ b/readme
@@ -1,13 +1,13 @@
 1、get_data_jzjz_alluli_v0.py
 功能：在hive库中创建相应的表，并从轨迹表中获取一天时间的转移矩阵
 
-2、get_data_jzjz_alluli_v1.py
+2、get_ulidata_jzjz.py
 功能：在hive库中创建相应的表，并从轨迹表中获取多天时间的转移矩阵
 
 3、coarse_filtration.py
 功能：运用加权平均算法粗略计算出一天内大于校准距离大于5000米的uli。（选择一天的数据对于64万uli先进行过滤）
 
-4、jzjz_main.py
+4、DBSCAN_jzjz.py
 功能：运用DBSCAN算法对大于5000米的uli连续多天的转移矩阵进行计算，再去确定uli是否在nextuli所组成的最大的簇内。
 计算原理：对每个uli的转移矩阵数据进行DBSCAN计算，找出nextuli最大的簇，在确定校准坐标点和原始坐标点是否包括在最大簇中，对不同的uli打不同的标签。
 
